# glazier-react-widget

./: .gitignore  README.md  cabal.project  glazier-react-widget.cabal  package.json  stack.yaml
jsbits/: glazier-react-widgets.js
src/Control/: Parameterized.hs
src/Data/: UKey.hs
src/Glazier/React/: Action.hs  Actions.hs  Commands.hs  Effect.hs  Executors.hs  Framework.hs  Prototypes.hs  Triggers.hs  Widget.hs  Widgets.hs
src/Glazier/React/Action/: KeyDownKey.hs
src/Glazier/React/Actions/: KeyDownKey.hs
src/Glazier/React/Commands/: Create.hs  Focus.hs  FocusElement.hs  Glaze.hs  Make.hs  Maker.hs  Property.hs  Reactor.hs  Rerender.hs  SetProperty.hs
src/Glazier/React/Commands/Create/: Run.hs
src/Glazier/React/Commands/Focus/: Exec.hs  Run.hs
src/Glazier/React/Commands/FocusElement/: Exec.hs
src/Glazier/React/Commands/Glaze/: Exec.hs
src/Glazier/React/Commands/Make/: Exec.hs  Run.hs
src/Glazier/React/Commands/Maker/: Run.hs
src/Glazier/React/Commands/Property/: Exec.hs  Run.hs
src/Glazier/React/Commands/Reactor/: Exec.hs
src/Glazier/React/Commands/Rerender/: Exec.hs
src/Glazier/React/Commands/SetProperty/: Exec.hs
src/Glazier/React/Devices/: Dispose.hs  Render.hs
src/Glazier/React/Devices/Dispose/: Run.hs
src/Glazier/React/Devices/Dispose/Render/: Run.hs
src/Glazier/React/Devices/Render/: Run.hs
src/Glazier/React/Displays/: Component.hs
src/Glazier/React/Effect/: Concur.hs  EventTarget.hs  HTMLElement.hs  JavaScript.hs
src/Glazier/React/Effect/Concur/: Exec.hs  Internal.hs
src/Glazier/React/Effect/EventTarget/: Exec.hs
src/Glazier/React/Effect/HTMLElement/: Exec.hs
src/Glazier/React/Effect/JavaScript/: Exec.hs
src/Glazier/React/Executors/: Rerender.hs
src/Glazier/React/Framework/: Action.hs  Activator.hs  Archetype.hs  Attach.hs  Build.hs  Builder.hs  Concur.hs  Core.hs  Create.hs  Display.hs  Disposer.hs  Effect.hs  Execute.hs  Executor.hs  Factory.hs  Finalizer.hs  Firsts.hs  Gadget.hs  Gadgetry.hs  Gizmo.hs  Handler.hs  IsReader.hs  MkId.hs  Model.hs  Obj.hs  Object.hs  Parameterized.hs  Prototype.hs  Reactor.hs  Scene.hs  Shared.hs  Trigger.hs  TypeLevel.hs  Widget.hs  Window.hs
src/Glazier/React/Framework/Action/: KeyDownKey.hs
src/Glazier/React/Framework/Core/: Activator.hs  Archetype.hs  Builder.hs  Display.hs  Executor.hs  Finalizer.hs  Gadget.hs  Gate.hs  Handler.hs  Initializer.hs  IsReader.hs  Method.hs  MkId.hs  Model.hs  Obj.hs  Prototype.hs  Reactor.hs  Run.hs  Topic.hs  Trigger.hs  TypeLevel.hs  Widget.hs  Window.hs
src/Glazier/React/Framework/Core/MkId/: Internal.hs
src/Glazier/React/Framework/Core/TypeLevel/: Internal.hs
src/Glazier/React/Framework/Effect/: DoEffect.hs  Focus.hs  GetProperty.hs  MonadHTMLElement.hs  MonadJS.hs  Reactor.hs  Rerender.hs  SetProperty.hs
src/Glazier/React/Framework/Effect/Focus/: Exec.hs
src/Glazier/React/Framework/Effect/GetProperty/: Exec.hs
src/Glazier/React/Framework/Effect/SetProperty/: Exec.hs
src/Glazier/React/Framework/MkId/: Internal.hs
src/Glazier/React/Framework/Reactor/: Exec.hs  Executor.hs
src/Glazier/React/Framework/TypeLevel/: Internal.hs
src/Glazier/React/Framework/Widget/: Exec.hs  Input.hs  Listing.hs  Run.hs  WithRef.hs
src/Glazier/React/Framework/Widget/Listing/: Internal.hs
src/Glazier/React/Gadgets/: Dispose.hs  Property.hs  Render.hs
src/Glazier/React/Gadgets/Property/: Run.hs
src/Glazier/React/Gadgets/Render/: Run.hs
src/Glazier/React/Prototypes/: Div.hs  Input.hs  List.hs  Listing.hs  WithRef.hs
src/Glazier/React/Prototypes/Input/: TextInput.hs
src/Glazier/React/Prototypes/Listing/: Internal.hs
src/Glazier/React/Triggers/: EventTarget.hs  KeyDownKey.hs
src/Glazier/React/Widget/: Action.hs  Actions.hs  Input.hs  Listing.hs  MapPile.hs  Mapping.hs  Pile.hs  Prototypes.hs  Run.hs
src/Glazier/React/Widget/Action/: KeyDownKey.hs
src/Glazier/React/Widget/Actions/: KeyDownKey.hs
src/Glazier/React/Widget/Executor/: HTMLElement.hs  JavaScript.hs
src/Glazier/React/Widget/Input/: Run.hs
src/Glazier/React/Widget/Listing/: Internal.hs
src/Glazier/React/Widget/MapPile/: Glam.hs
src/Glazier/React/Widget/Mapping/: Dressed.hs
src/Glazier/React/Widget/Pile/: Glam.hs
src/Glazier/React/Widget/Prototypes/: Input.hs  Listing.hs  WithRef.hs
src/Glazier/React/Widget/Prototypes/Listing/: Internal.hs
src/Glazier/React/Widgets/: Collection.hs  Input.hs  List.hs  Pile.hs
src/Glazier/React/Widgets/Collection/: Dynamic.hs
src/Glazier/React/Widgets/Input/: Internal.hs  Run.hs  TextInput.hs
src/Glazier/React/Widgets/List/: Run.hs
src/Glazier/React/Widgets/MapCollection/: Dynamic.hs
src/Glazier/React/Widgets/MapPile/: Glam.hs
src/Glazier/React/Widgets/Pile/: Glam.hs
src/Glazier/React/Windows/: Component.hs
