name:                glazier-react-widget
version:             0.7.0.0
synopsis:            Generic widget library using glazier-react
description:         Generic widget library using glazier-react
homepage:            https://github.com/louispan/glazier-react-widget#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Web, GUI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Glazier.React.Framework
                      --  Glazier.React.Framework.Action
                      --  Glazier.React.Framework.Action.KeyDownKey
                       Glazier.React.Framework.Core
                      --  Glazier.React.Framework.Core.Archetype
                       Glazier.React.Framework.Core.Display
                       Glazier.React.Framework.Core.Prototype
                       Glazier.React.Framework.Core.Trigger
                       Glazier.React.Framework.Core.Widget
                      --  Glazier.React.Framework.Effect
                      --  Glazier.React.Framework.Effect.MonadHTMLElement
                      --  Glazier.React.Framework.Effect.MonadJS
                      --  Glazier.React.Widget.Input
                      --  Glazier.React.Widget.Pile
                      --  Glazier.React.Widget.Pile.Glam
                      --  Glazier.React.Widget.MapPile
                      --  Glazier.React.Widget.MapPile.Glam
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 0.1.3.0
                     , bifunctors >= 5.4.1
                     , containers >= 0.5
                     , contravariant >= 1.4
                    --  , monadplus >= 1.4
                     , data-diverse >= 2.0.2.0
                     , data-diverse-lens >= 2.2.0.0
                     , deepseq >= 1.4
                     , disposable >= 0.3.0.0
                     , Diff >= 0.3.4
                     , dlist >= 0.8
                    --  , esoteric-extras >= 0.0.1
                    --  , generic-lens >= 0.5.1.0
                     , glazier >= 1.0
                     , glazier-react >= 0.7
                     , javascript-extras >= 0.4.0.0
                     , lens >= 4
                     , lens-misc >= 0.0.1
                     , mmorph >= 1
                     , monadlist >= 0.0.2
                     , mtl >= 2
                    --  , parameterized >= 0.5.0.0
                     , profunctors >= 5.2
                     , reducers >= 3.12.1
                     , stm >= 2.4.4.1
                     , tagged >= 0.8.5
                     , transformers >= 0.4
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  ghc-options:         -Wall
  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub >= 0.1.0.2

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-react-widget
