cabal-version:        2.2
name:                 glazier-react-widget
version:              2.0.0.0
synopsis:             Generic widget library using glazier-react
description:          Generic widget library using glazier-react. Please see README.md.
homepage:             https://github.com/louispan/glazier-react-widget#readme
license:              BSD-3-Clause
license-file:         LICENSE
author:               Louis Pan
maintainer:           louis@pan.me
copyright:            2019 Louis Pan
category:             Web, GUI
build-type:           Simple
extra-source-files:   README.md

library
  hs-source-dirs:     src
  js-sources:         jsbits/glazier-react-widgets.js
  exposed-modules:    Glazier.React.Widgets.Input
                      Glazier.React.Widgets.Input.Internal
                      -- Glazier.UKey
                      -- Glazier.React.Action
                      -- Glazier.React.Action.KeyDownKey
                      -- Glazier.React.Widgets.Collection
                      -- Glazier.React.Widgets.Collection.Dynamic
  build-depends:      base >= 4.7 && < 5
                    , aeson >= 1.4.2
                    , aeson-applicative >= 1.4
                    , alternators >= 2.0
                    , containers >= 0.5
                    , data-diverse >= 4.6
                    , data-diverse-lens >= 4.3
                    , deepseq >= 1.4
                    , dlist >= 0.8
                    , glazier >= 2
                    , glazier-react >= 2
                    , javascript-extras >= 0.7
                    , lens >= 4
                    , lens-misc >= 0
                    , monadlist >= 0
                    , mtl >= 2
                    , tagged >= 0.8
                    , text >= 1.2
                    , transformers >= 0.4
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  ghc-options:         -Wall -Wredundant-constraints
  build-depends:    ghcjs-base-stub >= 0.3.0.2

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-react-widget
