cabal-version:        2.2
name:                 glazier-react-widget
version:              2.0.0.0
synopsis:             Generic widget library using glazier-react
description:          Generic widget library using glazier-react. Please see README.md.
homepage:             https://github.com/louispan/glazier-react-widget#readme
license:              BSD-3-Clause
license-file:         LICENSE
author:               Louis Pan
maintainer:           louis@pan.me
copyright:            2019 Louis Pan
category:             Web, GUI
stability:            experimental
build-type:           Simple
extra-source-files:   README.md

library
  hs-source-dirs:     src
  exposed-modules:    Glazier.React.Widgets
                      Glazier.React.Widgets.Input
  build-depends:      base >= 4.7 && < 5
                    , deepseq >= 1.4
                    , dlist >= 0.8
                    , glazier-react >= 2
                    , javascript-extras >= 1
                    , lens >= 4
                    , tagged >= 0.8
  default-language:   Haskell2010
  default-extensions: ApplicativeDo
  ghc-options:        -Wall -Wredundant-constraints
  build-depends:      ghcjs-base-stub >= 0.3.0.2

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-react-widget
